--- a/src/main/resources/testservlet.hbs
+++ b/src/main/resources/testservlet.hbs
@@ -5,7 +5,7 @@
 <body>
 <pre>The EJB ref is {{ejb}}</pre>
 
-<p>The invocation result is {{invocation}}</p>
+<p>The invocation result is <span id="greeting">{{invocation}}</span></p>
 
 <p>The time of execution is {{when}}</p>
 
